PluginManager: refactor